# Task04/config/swagger.json
@@ -325,6 +325,62 @@
 				} ]
 			}
 		},
+		"/institutes/{instituteId}/report" : {
+			"get" : {
+				"tags" : [ "admins" ],
+				"summary" : "Génère un rapport pour l'institut",
+				"description" : "Génère, au format TeX, un rapport de l'activité de l'institut sur le mois donné.\n",
+				"operationId" : "getInstituteReport",
+				"parameters" : [ {
+					"name" : "instituteId",
+					"in" : "path",
+					"description" : "identifiant de l'institut pour lequel générer le rapport\n",
+					"required" : true,
+					"style" : "simple",
+					"explode" : true,
+					"schema" : {
+						"type" : "integer",
+						"format" : "uint32"
+					}
+				}, {
+					"name" : "month",
+					"in" : "query",
+					"description" : "numéro du mois pour lequel générer le rapport. Par défaut, le mois en cours est utilisé.\n",
+					"required" : false,
+					"style" : "form",
+					"explode" : true,
+					"schema" : {
+						"type" : "integer",
+						"format" : "uint32"
+					}
+				}, {
+					"name" : "lang",
+					"in" : "query",
+					"description" : "Langue dans laquelle générer le rapport.\n",
+					"required" : false,
+					"style" : "form",
+					"explode" : true,
+					"schema" : {
+						"type" : "string",
+						"enum": ["french", "spanish"]
+					}
+				} ],
+				"responses" : {
+					"200" : {
+						"description" : "génération du rapport",
+						"content" : {
+							"application/x-tex" : {}
+						}
+					},
+					"500" : {
+						"description" : "erreur interne du serveur"
+					}
+				},
+				"security" : [ {
+					"bearerAuth" : [ ]
+				} ]
+			}
+		},
 		"/gateways" : {
 			"get" : {
 				"tags" : [ "guests" ],
